Fix 12 broken image paths across restaurant pages
Fixed image references to match actual filenames:
- Bouldin Creek: BouldinCreek-1.png → Bouldin-1.png
- Casa de Luz: CasaDeLuz-1.png → casa_de_luz.jpg
- Il Brutto: IlBrutto-1.png → il_brutto-1.png
- Lil'Doddy: LilDoddy-1.png → HopDoddy-1.png
- Snap Kitchen (3 pages): SnapKitchen-1.png → Snap_Kit-1.png
- Steeping Room: SteepingRoom-1.png → 7-1.jpg
- Vinaigrette: Vinaigrette-1.png → 8-1.jpg
- Flower Child (3 pages): FlowerChild-1.png → ID-based images
- Ka-Prow: KaProw-1.png → 24-1.jpg
- Dia's Market: DiasMarket-1.png → 25-1.jpg

--- a/restaurants/casa-de-luz.html
+++ b/restaurants/casa-de-luz.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/casa-de-luz.html">
     <meta property="og:title" content="Casa de Luz | 100% Organic Vegan Gluten-Free">
     <meta property="og:description" content="100% organic, vegan, and gluten-free macrobiotic community center. Whole plant nutrition with no processed oils or additives.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/CasaDeLuz-1.png">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/casa_de_luz.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -73,7 +73,7 @@
       },
       "email": "management@casadeluz.org",
       "url": "https://www.casadeluz.org",
-      "image": "https://austinglutenfree.com/images/restaurants/CasaDeLuz-1.png",
+      "image": "https://austinglutenfree.com/images/restaurants/casa_de_luz.jpg",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.4",
@@ -114,7 +114,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/CasaDeLuz-1.png" alt="Casa de Luz - 100% gluten-free vegan restaurant in Austin" class="main-image">
+                        <img src="../images/restaurants/casa_de_luz.jpg" alt="Casa de Luz - 100% gluten-free vegan restaurant in Austin" class="main-image">
                     </div>
                     <div class="restaurant-info">
                         <h1>Casa de Luz</h1>
