--- a/restaurants/dias-market.html
+++ b/restaurants/dias-market.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/dias-market.html">
     <meta property="og:title" content="Dia's Market | GF Deli Options">
     <meta property="og:description" content="Specialty deli with gluten-free bread for sandwiches and prepared foods.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/DiasMarket-1.png">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/25-1.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -70,7 +70,7 @@
         "addressCountry": "US"
       },
       "url": "https://www.diasmarket.com",
-      "image": "https://austinglutenfree.com/images/restaurants/DiasMarket-1.png",
+      "image": "https://austinglutenfree.com/images/restaurants/25-1.jpg",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.3",
@@ -111,7 +111,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/DiasMarket-1.png" alt="Dia's Market - specialty deli in East Austin" class="main-image">
+                        <img src="../images/restaurants/25-1.jpg" alt="Dia's Market - specialty deli in East Austin" class="main-image">
                     </div>
                     <div class="restaurant-info">
                         <h1>Dia's Market</h1>
