--- a/restaurants/flower-child---domain.html
+++ b/restaurants/flower-child---domain.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/flower-child---domain.html">
     <meta property="og:title" content="Flower Child - Domain | Healthy GF Options">
     <meta property="og:description" content="Healthy fast-casual with clearly marked GF menu items at The Domain.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/FlowerChild-1.png">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/21-1.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -72,7 +72,7 @@
         "addressCountry": "US"
       },
       "url": "https://www.iamaflowerchild.com",
-      "image": "https://austinglutenfree.com/images/restaurants/FlowerChild-1.png",
+      "image": "https://austinglutenfree.com/images/restaurants/21-1.jpg",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.4",
@@ -113,7 +113,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/FlowerChild-1.png" alt="Flower Child - healthy restaurant at The Domain" class="main-image">
+                        <img src="../images/restaurants/21-1.jpg" alt="Flower Child - healthy restaurant at The Domain" class="main-image">
                     </div>
                     <div class="restaurant-info">
                         <h1>Flower Child - Domain</h1>
