--- a/restaurants/ka-prow.html
+++ b/restaurants/ka-prow.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/ka-prow.html">
     <meta property="og:title" content="Ka-Prow | Thai with GF Options">
     <meta property="og:description" content="Thai restaurant with many gluten-free options in South Austin.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/KaProw-1.png">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/24-1.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -69,7 +69,7 @@
         "addressRegion": "TX",
         "addressCountry": "US"
       },
-      "image": "https://austinglutenfree.com/images/restaurants/KaProw-1.png",
+      "image": "https://austinglutenfree.com/images/restaurants/24-1.jpg",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.2",
@@ -110,7 +110,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/KaProw-1.png" alt="Ka-Prow - Thai restaurant in Austin" class="main-image">
+                        <img src="../images/restaurants/24-1.jpg" alt="Ka-Prow - Thai restaurant in Austin" class="main-image">
                     </div>
                     <div class="restaurant-info">
                         <h1>Ka-Prow</h1>
