--- a/restaurants/the-steeping-room.html
+++ b/restaurants/the-steeping-room.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/the-steeping-room.html">
     <meta property="og:title" content="The Steeping Room | GF Tea Service">
     <meta property="og:description" content="Tea house with gluten-free scones and afternoon tea options.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/SteepingRoom-1.png">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/7-1.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -72,7 +72,7 @@
         "addressCountry": "US"
       },
       "url": "https://www.thesteepingroom.com",
-      "image": "https://austinglutenfree.com/images/restaurants/SteepingRoom-1.png",
+      "image": "https://austinglutenfree.com/images/restaurants/7-1.jpg",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.1",
@@ -113,7 +113,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/SteepingRoom-1.png" alt="The Steeping Room - tea house in Austin" class="main-image">
+                        <img src="../images/restaurants/7-1.jpg" alt="The Steeping Room - tea house in Austin" class="main-image">
                     </div>
                     <div class="restaurant-info">
                         <h1>The Steeping Room</h1>
