--- a/restaurants/vinaigrette.html
+++ b/restaurants/vinaigrette.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/vinaigrette.html">
     <meta property="og:title" content="Vinaigrette | Gourmet Salads with GF Options">
     <meta property="og:description" content="Gourmet salad bistro with many naturally gluten-free entrée salads.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/Vinaigrette-1.png">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/8-1.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -73,7 +73,7 @@
       },
       "telephone": "(512) 852-8791",
       "url": "https://www.vinaigretteonline.com",
-      "image": "https://austinglutenfree.com/images/restaurants/Vinaigrette-1.png",
+      "image": "https://austinglutenfree.com/images/restaurants/8-1.jpg",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.4",
@@ -114,7 +114,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/Vinaigrette-1.png" alt="Vinaigrette - salad bistro in Austin" class="main-image">
+                        <img src="../images/restaurants/8-1.jpg" alt="Vinaigrette - salad bistro in Austin" class="main-image">
                     </div>
                     <div class="restaurant-info">
                         <h1>Vinaigrette</h1>
