Fix broken links in gluten-free-austin-guide.html
- Update Zucchini Kill links: zucchini-kill.html → zucchini-kill-bakery.html
- Replace closed Koriente with Thai Fresh in Weekend Getaway itinerary

--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -151,16 +151,16 @@
             <section id="itineraries">
                 <h2>Three Sample Gluten-Free Itineraries</h2>
                 <h3>Weekend Getaway (Friday–Sunday)</h3>
-                <p><strong>Friday:</strong> Arrive in time for dinner at <a href="../restaurants/koriente.html">Koriente</a> in East Austin for GF noodle bowls. Grab dessert at <a href="../restaurants/bougies-donuts---coffee.html">Bougie's Donuts & Coffee</a> in Sunset Valley for gluten-free donuts and coffee.</p>
+                <p><strong>Friday:</strong> Arrive in time for dinner at <a href="../restaurants/thai-fresh.html">Thai Fresh</a> in South Austin for GF Thai cuisine and in-house bakery treats. Grab dessert at <a href="../restaurants/bougies-donuts---coffee.html">Bougie's Donuts & Coffee</a> in Sunset Valley for gluten-free donuts and coffee.</p>
                 <p><strong>Saturday:</strong> Kick off with <a href="../restaurants/the-steeping-room.html">The Steeping Room</a> for GF scones, then explore downtown murals before lunch at <a href="../restaurants/casa-de-luz.html">Casa de Luz</a>. End the day with tapas at <a href="../restaurants/odd-duck.html">Odd Duck</a>—their team excels at accommodating gluten-free tasting menus.</p>
-                <p><strong>Sunday:</strong> Brunch at <a href="../restaurants/picnik---barton-springs.html">Picnik Barton Springs</a>, stroll Zilker Park, and finish with bakery boxes from <a href="../restaurants/zucchini-kill.html">Zucchini Kill</a> to take on the road.</p>
+                <p><strong>Sunday:</strong> Brunch at <a href="../restaurants/picnik---barton-springs.html">Picnik Barton Springs</a>, stroll Zilker Park, and finish with bakery boxes from <a href="../restaurants/zucchini-kill-bakery.html">Zucchini Kill</a> to take on the road.</p>
 
                 <h3>Family-Friendly Austin</h3>
                 <p><strong>Day 1:</strong> Stop at <a href="../restaurants/lildoddy-burger-lab.html">Lil’ Doddy Burger Lab</a> for sliders made on GF buns, then head to the Thinkery children’s museum. Dinner at <a href="../restaurants/snap-kitchen---west-lake-hills.html">Snap Kitchen – West Lake Hills</a> keeps things easy with reheatable meals.</p>
                 <p><strong>Day 2:</strong> Enjoy tacos at <a href="../restaurants/dias-market.html">Dia’s Market</a>, and pack GF snacks for Barton Springs Pool. Order pizza night from <a href="../restaurants/ka-prow.html">Ka Prow</a> (they offer GF crusts and tamari-based sauces).</p>
 
                 <h3>Plant-Based &amp; Gluten-Free Explorer</h3>
-                <p><strong>Day 1:</strong> Start at <a href="../restaurants/casa-de-luz.html">Casa de Luz</a> for macrobiotic plates, then bike the Lady Bird Lake trail. Grab smoothies from <a href="../restaurants/picnik---burnet-road.html">Picnik</a> and finish with vegan baked goods at <a href="../restaurants/zucchini-kill.html">Zucchini Kill</a>.</p>
+                <p><strong>Day 1:</strong> Start at <a href="../restaurants/casa-de-luz.html">Casa de Luz</a> for macrobiotic plates, then bike the Lady Bird Lake trail. Grab smoothies from <a href="../restaurants/picnik---burnet-road.html">Picnik</a> and finish with vegan baked goods at <a href="../restaurants/zucchini-kill-bakery.html">Zucchini Kill</a>.</p>
                 <p><strong>Day 2:</strong> Brunch at <a href="../restaurants/bouldin-creek-cafe.html">Bouldin Creek Cafe</a> (ask for the GF tofu scramble), afternoon tea at <a href="../restaurants/the-steeping-room.html">The Steeping Room</a>, and a dinner tasting at <a href="../restaurants/uchi.html">Uchi</a>, where the chefs happily guide gluten-free omakase.</p>
             </section>
 
@@ -179,7 +179,7 @@
             <section id="bakeries">
                 <h2>Dedicated Gluten-Free Bakeries &amp; Sweet Treats</h2>
                 <p>Austin is home to several fully gluten-free bakeries and dessert pop-ups. Follow them on social media for drop schedules and holiday specials.</p>
-                <p><strong><a href="../restaurants/bom-bakeshop.html">Bom Bakeshop</a></strong> serves seasonal kolaches, tres leches cake, and savory hand pies. Pre-order online or visit Saturday farmers markets. <strong><a href="../restaurants/zucchini-kill.html">Zucchini Kill</a></strong> keeps punk vibes alive with GF cupcakes, Twinkie-style pastries, and rotating vegan treats.</p>
+                <p><strong><a href="../restaurants/bom-bakeshop.html">Bom Bakeshop</a></strong> serves seasonal kolaches, tres leches cake, and savory hand pies. Pre-order online or visit Saturday farmers markets. <strong><a href="../restaurants/zucchini-kill-bakery.html">Zucchini Kill</a></strong> keeps punk vibes alive with GF cupcakes, Twinkie-style pastries, and rotating vegan treats.</p>
                 <p>Craving donuts? <strong><a href="../restaurants/bougies-donuts---coffee.html">Bougie's Donuts & Coffee</a></strong> in Sunset Valley is entirely gluten-free and offers artisanal donuts and premium coffee. For birthday cakes, check <strong><a href="../restaurants/picnik---burnet-road.html">Picnik</a></strong> or <strong><a href="../restaurants/intero.html">Intero</a></strong> for beautifully plated desserts free of gluten cross-contact.</p>
             </section>
 
@@ -254,7 +254,7 @@
                 <div class="footer-section">
                     <h4>Plan Your Visit</h4>
                     <ul>
-                        <li><a href="../restaurants/zucchini-kill.html">Dedicated GF Bakeries</a></li>
+                        <li><a href="../restaurants/zucchini-kill-bakery.html">Dedicated GF Bakeries</a></li>
                         <li><a href="../restaurants/red-ash.html">Upscale Dining</a></li>
                         <li><a href="../restaurants/bird-bird-biscuit.html">Breakfast &amp; Brunch</a></li>
                         <li><a href="../restaurants/postino---south-lamar.html">Patio Dining</a></li>
