Fix remaining broken links across restaurant pages
- Update Zucchini Kill links in bom-bakeshop.html, bougies-donuts---coffee.html
- Replace closed Koriente links with Thai Fresh/Ka-Prow in:
  picnik---barton-springs.html, thai-fresh.html,
  salt-traders-coastal-cooking.html, the-well---congress.html

--- a/restaurants/bougies-donuts---coffee.html
+++ b/restaurants/bougies-donuts---coffee.html
@@ -178,7 +178,7 @@
 <h3>Similar Restaurants</h3>
 <ul>
 <li><a href="bom-bakeshop.html">Bom Bakeshop</a> - South Austin</li>
-<li><a href="zucchini-kill.html">Zucchini Kill</a> - East Austin</li>
+<li><a href="zucchini-kill-bakery.html">Zucchini Kill</a> - East Austin</li>
 </ul>
 </div>
 
