--- a/restaurants/salt-traders-coastal-cooking.html
+++ b/restaurants/salt-traders-coastal-cooking.html
@@ -213,7 +213,7 @@
 <h3>Nearby Restaurants</h3>
 <ul>
 <li><a href="picnik---barton-springs.html">Picnik - Barton Springs</a> - Downtown Austin (Barton Springs)</li>
-<li><a href="koriente.html">Koriente</a> - Downtown Austin</li>
+<li><a href="thai-fresh.html">Thai Fresh</a> - South Austin</li>
 <li><a href="red-ash.html">Red Ash</a> - Downtown</li>
 </ul>
 </div>
