--- a/restaurants/thai-fresh.html
+++ b/restaurants/thai-fresh.html
@@ -178,7 +178,7 @@
                         <div class="related-restaurants">
                             <h3>Similar Restaurants</h3>
                             <ul>
-                                <li><a href="koriente.html">Koriente</a> - Downtown Austin</li>
+                                <li><a href="ka-prow.html">Ka-Prow</a> - South Austin</li>
                                 <li><a href="lucky-robot.html">Lucky Robot</a> - South Lamar</li>
                             </ul>
                         </div>
