--- a/restaurants/bom-bakeshop.html
+++ b/restaurants/bom-bakeshop.html
@@ -212,7 +212,7 @@
                         <div class="related-restaurants">
 <h3>Similar Restaurants</h3>
 <ul>
-<li><a href="zucchini-kill.html">Zucchini Kill</a> - East Austin</li>
+<li><a href="zucchini-kill-bakery.html">Zucchini Kill</a> - East Austin</li>
 </ul>
 </div>
 
