--- a/restaurants/picnik---barton-springs.html
+++ b/restaurants/picnik---barton-springs.html
@@ -221,7 +221,7 @@
                         <div class="nearby-restaurants">
 <h3>Nearby Restaurants</h3>
 <ul>
-<li><a href="koriente.html">Koriente</a> - Downtown Austin</li>
+<li><a href="thai-fresh.html">Thai Fresh</a> - South Austin</li>
 <li><a href="red-ash.html">Red Ash</a> - Downtown</li>
 <li><a href="salt-traders-coastal-cooking.html">Salt Traders Coastal Cooking</a> - Downtown Austin</li>
 </ul>
