--- a/restaurants/the-well---congress.html
+++ b/restaurants/the-well---congress.html
@@ -200,7 +200,7 @@
                             <ul>
                                 <li><a href="atx-cocina.html">ATX Cocina</a> - Downtown Austin</li>
                                 <li><a href="red-ash.html">Red Ash</a> - Downtown Austin</li>
-                                <li><a href="koriente.html">Koriente</a> - Downtown Austin</li>
+                                <li><a href="thai-fresh.html">Thai Fresh</a> - South Austin</li>
                             </ul>
                         </div>
 
